--- a/src/components/ProductModal/ProductModal.module.scss
+++ b/src/components/ProductModal/ProductModal.module.scss
@@ -19,6 +19,10 @@
     padding: 0;
     align-items: flex-end;
   }
+
+  @include respond-below(sm) {
+    align-items: stretch;
+  }
 }
 
 // ---- Modal Shell ----
@@ -39,6 +43,12 @@
   @include respond-below(md) {
     max-height: 95vh;
     border-radius: $border-radius-2xl $border-radius-2xl 0 0;
+  }
+
+  @include respond-below(sm) {
+    max-height: 100vh;
+    max-height: 100dvh;
+    border-radius: 0;
   }
 }
 
